--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,3 +1,5 @@
-FROM python:3
+FROM python:3.5
 
-RUN pip3 install scipy numpy scikit_learn
+RUN apt-get update -y && apt-get upgrade -y && apt-get install default-jdk -y
+
+RUN pip3 install scipy numpy scikit_learn torch torchvision
